found collinearity issue when edge has only collinear neighbors